Adjusted GridAlignedCamera to be responsive in the editor, and camera to run at 160*144 resolution.

--- a/The Legend of Zelda - Majora's Mask Demake.csproj
+++ b/The Legend of Zelda - Majora's Mask Demake.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Engine\GridAlignedCamera\GridAlignedCamera.cs" />
     <Compile Include="Engine\GridAlignedCamera\GridAlignedCamera.designer.cs" />
+    <Compile Include="Engine\GridAlignedCamera\NonPlayerEntityBounds.cs" />
     <Compile Include="Engine\GridAlignedCamera\TransitionAction.cs" />
     <Compile Include="Entities\BaseEntity\BaseEntity.cs" />
     <Compile Include="Entities\BaseEntity\BaseEntity.designer.cs" />
